Bug 73517 - xwayland menus doesn't always show properly [weston]
Summary: xwayland menus doesn't always show properly [weston]
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: XWayland (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-12 11:15 UTC by Axel Davy
Modified: 2014-01-14 00:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Axel Davy 2014-01-12 11:15:55 UTC
With weston git.

Whereas firefox menus are shown properly,

vlc menus are at an incorrect location.

For example if menu A is at the left of menu B,
when showing menu A, weston would show it at the right of the location where it would have shown B.


There are also issues with xwayland popups which doesn't show.
Comment 1 Kristian Høgsberg 2014-01-14 00:33:29 UTC
commit fa506b6dda941438e5325ddf09221c12a6cdbd0d
Author: Axel Davy <axel.davy@ens.fr>
Date:   Sun Jan 12 15:06:04 2014 +0100

    Fix XWayland transient window location.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=73517
    
    Signed-off-by: Axel Davy <axel.davy@ens.fr>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.